--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -8,7 +8,7 @@
             <%= errorMessage %>
              </div>
     <% } %>
-    <form class="row login-form" action="/login" method="POST" novalidate>
+    <form class="row login-form" action="/login" method="POST" >
         <div class="col-sm-6">
             <label for="inputEmail4" class="form-label">Email</label>
             <input type="email" class="form-control" id="inputEmail4" name = "email">
