--- a/views/auth/otp.ejs
+++ b/views/auth/otp.ejs
@@ -8,7 +8,7 @@
             <%= errorMessage %>
              </div>
     <% } %>
-    <form class="row login-form" action="/reset/verify" method="POST" novalidate>
+    <form class="row login-form" action="/reset/verify" method="POST" >
         <div class="col-sm-6">
             <label for="inputEmail4" class="form-label">Enter Otp</label>
             <input  type = "password" class="form-control" id="inputEmail4" name = "otp">
