--- a/views/auth/resetPassword.ejs
+++ b/views/auth/resetPassword.ejs
@@ -8,7 +8,7 @@
             <%= errorMessage %>
              </div>
     <% } %>
-    <form class="login-form" action="/reset/resetPassword" method="POST" novalidate>
+    <form class="login-form" action="/reset/resetPassword" method="POST" >
         <div class="col-sm-6">
             <label for="inputPassword4" class="form-label">New Password</label>
             <input type="password" class="form-control" id="inputPassword4" name = "password">
